BlueFS: prevent BlueFS::dirty_files from being leaked when syncing metadata

Fixes: https://tracker.ceph.com/issues/42091
Signed-off-by: Xuehan Xu <xxhdx1985126@163.com>
(cherry picked from commit f1ae6d9555a1e1b7b61143dd1f867ea7afc2f8c4)